--- a/practical_2/Snakefile
+++ b/practical_2/Snakefile
@@ -15,29 +15,27 @@ rule setup:
 	"""
 
 
-for condition in config["CONDITIONS"]:
-	rule:
-		name:
-			f"side_effects_{condition}"
-		input:
-			"../data/original/drugLibTrain_raw.tsv"
-		output:
-			f"../data/derived/word_rankings_{condition}.csv"
-		shell:
-			f"Rscript ../code/1_find_side_effects.R {condition}"
+rule:
+	name:
+		"side_effects_{condition}"
+	input:
+		"../data/original/drugLibTrain_raw.tsv"
+	output:
+		"../data/derived/word_rankings_{condition}.csv"
+	shell:
+		"Rscript ../code/1_find_side_effects.R {wildcards.condition}"
 
-
-for condition in config["CONDITIONS"]:
-	rule:
-		name:
-			f"plot_{condition}"
-		input:
-			f"../data/derived/word_rankings_{condition}.csv"
-		output:
-			f"../results/wordcloud_{condition}.png",
-			f"../results/bigramcloud_{condition}.png"
-		shell:
-			f"Rscript ../code/2_plot_wordcloud.R {condition}"
+rule:
+	priority: -10
+	name:
+		"plot_{condition}"
+	input:
+		"../data/derived/word_rankings_{condition}.csv"
+	output:
+		"../results/wordcloud_{condition}.png",
+		"../results/bigramcloud_{condition}.png"
+	shell:
+		"Rscript ../code/2_plot_wordcloud.R {wildcards.condition}"
 
 rule clean:
 	"Clean up"
